--- a/oe_kemexon_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemexon_custom/report/pro-forma_invoice_template.xml
@@ -5,11 +5,11 @@
             <t t-call="web.external_layout">
                 <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
                 <br/>
-                <div style="border: 2px solid black;"/>
+                <div style="border: 1px solid black;"/>
                 <center>
                     <b style="font-size:35px;" class="text-center">PROFORMA INVOICE</b>
                 </center>
-                <div style="border: 2px solid black;"/>
+                <div style="border: 1px solid black;"/>
                 <br/>
                 <br/>
                 <div class="row">
@@ -20,9 +20,9 @@
                                 <br/>
                                 <strong>Deal Ref :</strong>
                             </div>
-                            <div class="col-4"/>
+                            <div class="col-2"/>
                             <br/>
-                            <div class="col-3">
+                            <div class="col-5">
                                 <span t-field="doc.name"/>
                                 <br/>
                                 <span class="m-0" t-field="doc.deal_ref"/>
@@ -32,7 +32,7 @@
                     <div class="col-2"/>
                     <div class="col-6">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 pl-1">
                                 <strong>Date :</strong>
                             </div>
                             <div class="col-2"/>
@@ -77,7 +77,11 @@
                 <br/>
                 <br/>
                 <t t-set="lines_to_report" t-value="doc._get_order_lines_to_report()"/>
-                <table width="100%">
+                <style>
+                    .my_data_table th {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
+                    .my_data_table td {border-right: 1px solid white;border-left: 1px solid white;padding-top: 5px;padding-bottom: 5px;}
+                </style>
+                <table width="100%" class="my_data_table">
                     <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                     <tr style="border-bottom:2px solid #d4d6d9;border-top:2px solid #d4d6d9; border-top:2px solid #d4d6d9">
                         <th name="th_description" class="text-start">Description</th>
@@ -172,7 +176,7 @@
                 <br/>
                 <br/>
                 <strong>Delivery Information</strong>
-                <div style="border: 2px solid black;"/>
+                <div style="border: 1px solid black;"/>
                 <br/>
                 <br/>
 
@@ -180,10 +184,9 @@
                     <div class="col-2">
                         <strong>Delivery Period</strong>
                     </div>
-                    <div class="col-1"/>
-                    <div class="col-3">
+                    <div class="col-4" style="padding-left: 37px;">
                         <t t-if="doc.picking_ids">
-                            <strong class="m-0" t-field="doc.picking_ids.delivery_from"/>
+                            <span class="m-0" t-field="doc.picking_ids.delivery_from"/>
                             -
                             <span class="m-0" t-field="doc.picking_ids.delivery_to"/>
 
@@ -195,8 +198,7 @@
                         <strong>Delivery Location</strong>
                     </div>
                     <br/>
-                    <div class="col-1"/>
-                    <div class="col-3">
+                    <div class="col-4" style="padding-left: 37px;">
                         <t t-if="doc.picking_ids">
                             <span class="m-0" t-field="doc.picking_ids.delivery_location"/>
 
@@ -207,8 +209,7 @@
                     <div class="col-2">
                         <strong>Incoterms</strong>
                     </div>
-                    <div class="col-1"/>
-                    <div class="col-3">
+                    <div class="col-4" style="padding-left: 37px;">
                         <t t-if="doc.incoterm">
                             <span class="m-0" t-field="doc.incoterm"/>
 
@@ -222,15 +223,15 @@
                 <br/>
                 <br/>
                 <strong>Financial Information</strong>
-                <div style="border: 2px solid black;"/>
+                <div style="border-top: 2px solid black;"/>
                 <br/>
                 <!--                <table width="100%">-->
                 <div class="row">
                     <div class="col-1">
                         <strong>Currency</strong>
                     </div>
-                    <div class="col-2"/>
-                    <div class="col-1">
+                    <div class="col-1"/>
+                    <div class="col-2"  style="padding-left: 37px;">
                         <t t-if="doc.partner_id.bank_ids">
                             <span class="m-0" t-field="doc.partner_id.bank_ids[0].currency_id"/>
                         </t>
@@ -247,11 +248,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1">
+                    <div class="col-2">
                         <strong>Payment Terms</strong>
                     </div>
-                    <div class="col-2"/>
-                    <div class="col-1">
+                    <div class="col-2" style="padding-left: 37px;">
                         <span style="text-align:left;" class="m-0" t-field="doc.payment_term_id"/>
                     </div>
                     <div class="col-2"/>
@@ -324,7 +324,7 @@
                 <br/>
                 <br/>
                 <strong>Terms And Conditions</strong>
-                <div style="border: 2px solid black;"/>
+                <div  style="border-top: 2px solid black;"/>
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
                 <ul>
