--- a/oe_kemexon_custom/views/trucktransportdetails.xml
+++ b/oe_kemexon_custom/views/trucktransportdetails.xml
@@ -11,7 +11,7 @@
                 <field name="passport"/>
                 <field name="nominated"/>
                 <field name="loaded"/>
-                <field name="offloaded"/>
+                <field name="offloaded" attrs="{'readonly': [('is_updated', '=', True)]}" force_save="1"/>
                 <field name="status"/>
                 <field name="statusdate"/>
                 <field name="is_updated" invisible="1"/>
