--- a/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/pro-forma_invoice_template.xml
@@ -232,8 +232,8 @@
                     </div>
                     <div class="col-1"/>
                     <div class="col-2"  style="padding-left: 37px;">
-                        <t t-if="doc.partner_id.bank_ids">
-                            <span class="m-0" t-field="doc.partner_id.bank_ids[0].currency_id"/>
+                        <t t-if="doc.partner_id.company_bank_account_id">
+                            <span class="m-0" t-field="doc.partner_id.company_bank_account_id.currency_id"/>
                         </t>
                     </div>
                     <div class="col-2"/>
@@ -242,8 +242,8 @@
                     </div>
                     <div class="col-1"/>
                     <div class="col-3">
-                        <t t-if="doc.partner_id.bank_ids">
-                            <span style="text-align:left;" class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id"/>
+                        <t t-if="doc.partner_id.company_bank_account_id">
+                            <span style="text-align:left;" class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id"/>
                         </t>
                     </div>
                 </div>
@@ -262,9 +262,9 @@
                             </div>
                             <div class="col-2"/>
                             <div class="col-6">
-                                <t t-if="doc.partner_id.bank_ids">
+                                <t t-if="doc.partner_id.company_bank_account_id">
                                     <span style="text-align:left;" class="m-0"
-                                          t-field="doc.partner_id.bank_ids[0].acc_holder_name"/>
+                                          t-field="doc.partner_id.company_bank_account_id.acc_holder_name"/>
                                 </t>
                             </div>
                         </div>
@@ -274,9 +274,9 @@
                             </div>
                             <div class="col-2"/>
                             <div class="col-6">
-                                <t t-if="doc.partner_id.bank_ids">
+                                <t t-if="doc.partner_id.company_bank_account_id">
                                     <span style="text-align:left;" class="m-0"
-                                          t-field="doc.partner_id.bank_ids[0].acc_number"/>
+                                          t-field="doc.partner_id.company_bank_account_id.acc_number"/>
                                 </t>
                             </div>
                         </div>
@@ -286,8 +286,8 @@
                             </div>
                             <div class="col-2"/>
                             <div class="col-6" style="text-align:left;">
-                                <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id.bic"/>
+                                <t t-if="doc.partner_id.company_bank_account_id">
+                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.bank_id.bic"/>
                                 </t>
                             </div>
                         </div>
@@ -297,8 +297,8 @@
                             </div>
                             <div class="col-2"/>
                             <div class="col-6">
-                                <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].inter_mediatory_bank_id"/>
+                                <t t-if="doc.partner_id.company_bank_account_id">
+                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_bank_id"/>
                                 </t>
                             </div>
                         </div>
@@ -308,8 +308,8 @@
                             </div>
                             <div class="col-2"/>
                             <div class="col-6">
-                                <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].inter_mediatory_swift"/>
+                                <t t-if="doc.partner_id.company_bank_account_id">
+                                    <span class="m-0" t-field="doc.partner_id.company_bank_account_id.inter_mediatory_swift"/>
                                 </t>
                             </div>
                         </div>
