--- a/oe_kemoxon_delivery_custom/report/delivery_sale_invoice_template.xml
+++ b/oe_kemoxon_delivery_custom/report/delivery_sale_invoice_template.xml
@@ -4,13 +4,11 @@
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
                     <t t-foreach="docs" t-as="o">
-                        <br/>
-                        <div style="border: 1px solid black;"/>
+                       <div style="border-top: 2px solid black; margin-top: -12px;"/>
                         <strong style="font-size:30px;" class="text-center">
-                            <center>Delivery Sales INVOICE</center>
+                            <center>DELIVERY SALES INVOICE</center>
                         </strong>
                         <div style="border: 1px solid black;"/>
-                        <br/>
                         <br/>
                         <t t-set="truck_transport_details_ids" t-value="o"/>
                         <!--                        <t t-if="o.truck_transport_details_ids">-->
@@ -21,7 +19,6 @@
                         <!--                            </t>-->
                         <!--                        </t>-->
                         <t t-set="picking" t-value="o.stock_pick_ids"/>
-                        <br/>
                         <style>
                             .info_table th {text-align: left!important; padding-bottom: 15px!important;}
                         </style>
@@ -39,7 +36,7 @@
                                     <th width="40%">Date :</th>
                                     <td width="60%">
                                       <span class="m-0" t-field="picking.scheduled_date"
-                                          t-options="{&quot;format&quot;: &quot;MM/dd/yyyy&quot;}"/>
+                                          t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
                                     </td>
                                 </table>
                             </div>
@@ -203,10 +200,9 @@
                         <br/>
                         <div style="border-top: 2px solid black;"/>
                         <strong style="font-size:30px;" class="text-center">
-                            <center>Delivery Note</center>
+                            <center>DELIVERY NOTE</center>
                         </strong>
                         <div style="border-top: 2px solid black;"/>
-                        <br/>
                         <br/>
                        <div class="col-12 row">
                             <div class="col-8">
@@ -222,7 +218,7 @@
                                     <th width="40%">Date :</th>
                                     <td width="60%">
                                       <span class="m-0" t-field="picking.scheduled_date"
-                                          t-options="{&quot;format&quot;: &quot;MM/dd/yyyy&quot;}"/>
+                                          t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
                                     </td>
                                 </table>
                             </div>
@@ -294,7 +290,13 @@
                                             <span t-field="move.product_uom_qty"/>
                                         </td>
                                         <td style="text-align:right;">
-                                            <span t-field="move.forecast_availability"/>
+                                            <t t-if="move.forecast_availability&lt;0">
+                                            <t t-set="actual_qty" t-value="move.forecast_availability*(-1)"/>
+                                            </t>
+                                            <t t-else="">
+                                                 <t t-set="actual_qty" t-value="move.forecast_availability"/>
+                                            </t>
+                                            <span t-esc="actual_qty"/>
                                         </td>
                                     </tr>
                                 </t>
