--- a/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
+++ b/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
@@ -16,7 +16,7 @@
                 <field name="statusdate"/>
                 <field name="is_updated" invisible="1"/>
 <!--                <button name="action_update_qty" type="object" string="Update Qty"/>-->
-                <button name="action_print_report" type="object" string="Print"/>
+                <button name="action_print_report" type="object" string="Print" context="{'p_id': parent.id}"/>
             </tree>
         </field>
     </record>
