--- a/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
+++ b/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
@@ -15,8 +15,8 @@
                 <field name="status"/>
                 <field name="statusdate"/>
                 <field name="is_updated" invisible="1"/>
-<!--                <button name="action_update_qty" type="object" string="Update Qty"/>-->
-                <button name="action_print_report" type="object" string="Print"/>
+                <!--                <button name="action_update_qty" type="object" string="Update Qty"/>-->
+                <button name="action_print_report" type="object" string="Print" context="{'p_id': parent.id}"/>
             </tree>
         </field>
     </record>
